<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Remote Control</string>
    <string name="app_title">Android Remote Control</string>
    <string name="app_description">This app allows you to control this device remotely from another device using a web browser.</string>
    
    <string name="status_title">Server Status:</string>
    <string name="status_running">Running</string>
    <string name="status_stopped">Stopped</string>
    
    <string name="ip_title">Connection Details:</string>
    <string name="ip_unknown">IP address unknown</string>
    <string name="ip_address_format">http://%1$s:%2$d</string>
    
    <string name="instructions">To connect from another device:\n1. Start the server on this device\n2. Open a web browser on the other device\n3. Enter the URL shown above\n4. Control this device remotely</string>
    
    <string name="start_server">Start Remote Control Server</string>
    <string name="stop_server">Stop Remote Control Server</string>
    
    <string name="permission_notice">Note: For full functionality (including touch injection), this app requires either root access or to be installed as a system app. File access requires storage permissions.</string>
</resources>
